--- a/v2/homol_modular_SegmentacaoNegocio.ipynb
+++ b/v2/homol_modular_SegmentacaoNegocio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.library.restartPython()"
+    "# dbutils.library.restartPython()"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -137,13 +137,14 @@
     "#Gerando a massa modelo passando o caminho do JSON como nome da variável\n",
     "base_entrada = pd.DataFrame({'solicitante.saldoMedio':[0],\n",
     "                             'solicitante.rendaLiquidaPicpay':[10000],\n",
-    "                             'solicitante.flagPrincipalidadeAll':[0]\n",
+    "                             'solicitante.flagPrincipalidadeAll':[0],\n",
+    "                             'solicitante.idade':[18]\n",
     "                            })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -156,7 +157,18 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------\n",
+      "Payload setado com sucesso\n",
+      "--------------------------------------\n",
+      "Conversao concluida com sucesso\n"
+     ]
+    }
+   ],
    "source": [
     "#Criação das massas com casos forçados\n",
     "#Digito CPF Concomitante CP\n",
@@ -164,6 +176,8 @@
     "massa_segmentacaoNegocio.gera_cenario('solicitante.saldoMedio',[-99999,0,99999,100000,100001,39999,40000,40001])\n",
     "massa_segmentacaoNegocio.gera_cenario('solicitante.rendaLiquidaPicpay',[-99999,11124.15,11124.16,11124.17,3442.36,3442.37,3442.38])\n",
     "massa_segmentacaoNegocio.gera_cenario('solicitante.flagPrincipalidadeAll',[1,0])\n",
+    "massa_segmentacaoNegocio.gera_cenario('solicitante.idade',[17,18,19,20])\n",
+    "\n",
     "\n",
     "massa_segmentacaoNegocio.get_massa_final()\n",
     "\n",
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -229,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -242,7 +256,76 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>valor</th>\n",
+       "      <th>Freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Varejo+</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jovem Cliente</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Varejo</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alta renda</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alta renda investidor</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   valor  Freq\n",
+       "0                Varejo+    42\n",
+       "1          Jovem Cliente   168\n",
+       "2                 Varejo    12\n",
+       "3             Alta renda   114\n",
+       "4  Alta renda investidor   112"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "results = []\n",
@@ -257,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -278,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -291,7 +374,225 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data-ID</th>\n",
+       "      <th>Result-State</th>\n",
+       "      <th>Result-Detail</th>\n",
+       "      <th>payloadParam.solicitante.saldoMedio</th>\n",
+       "      <th>rendaLiquidaPicpay</th>\n",
+       "      <th>payloadParam.solicitante.flagPrincipalidadeAll</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>result:segmentacaoNegocio</th>\n",
+       "      <th>expected:segmentacaoNegocio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>-99999.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td></td>\n",
+       "      <td>Varejo+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>-99999.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td></td>\n",
+       "      <td>Jovem Cliente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>-99999.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td></td>\n",
+       "      <td>Jovem Cliente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>-99999.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "      <td>Varejo+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>-99999.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td></td>\n",
+       "      <td>Varejo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443</th>\n",
+       "      <td>444</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>40001</td>\n",
+       "      <td>3442.38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "      <td>Alta renda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>445</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>40001</td>\n",
+       "      <td>3442.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td></td>\n",
+       "      <td>Alta renda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>446</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>40001</td>\n",
+       "      <td>3442.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td></td>\n",
+       "      <td>Jovem Cliente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>446</th>\n",
+       "      <td>447</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>40001</td>\n",
+       "      <td>3442.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td></td>\n",
+       "      <td>Jovem Cliente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>448</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>40001</td>\n",
+       "      <td>3442.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "      <td>Alta renda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>448 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Data-ID Result-State Result-Detail  payloadParam.solicitante.saldoMedio  \\\n",
+       "0          1                                                          -99999   \n",
+       "1          2                                                          -99999   \n",
+       "2          3                                                          -99999   \n",
+       "3          4                                                          -99999   \n",
+       "4          5                                                          -99999   \n",
+       "..       ...          ...           ...                                  ...   \n",
+       "443      444                                                           40001   \n",
+       "444      445                                                           40001   \n",
+       "445      446                                                           40001   \n",
+       "446      447                                                           40001   \n",
+       "447      448                                                           40001   \n",
+       "\n",
+       "     rendaLiquidaPicpay  payloadParam.solicitante.flagPrincipalidadeAll  \\\n",
+       "0             -99999.00                                               1   \n",
+       "1             -99999.00                                               1   \n",
+       "2             -99999.00                                               1   \n",
+       "3             -99999.00                                               1   \n",
+       "4             -99999.00                                               0   \n",
+       "..                  ...                                             ...   \n",
+       "443             3442.38                                               1   \n",
+       "444             3442.38                                               0   \n",
+       "445             3442.38                                               0   \n",
+       "446             3442.38                                               0   \n",
+       "447             3442.38                                               0   \n",
+       "\n",
+       "     idade result:segmentacaoNegocio expected:segmentacaoNegocio  \n",
+       "0       17                                               Varejo+  \n",
+       "1       18                                         Jovem Cliente  \n",
+       "2       19                                         Jovem Cliente  \n",
+       "3       20                                               Varejo+  \n",
+       "4       17                                                Varejo  \n",
+       "..     ...                       ...                         ...  \n",
+       "443     20                                            Alta renda  \n",
+       "444     17                                            Alta renda  \n",
+       "445     18                                         Jovem Cliente  \n",
+       "446     19                                         Jovem Cliente  \n",
+       "447     20                                            Alta renda  \n",
+       "\n",
+       "[448 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "massa_segmentacaoNegocio.atribui_expected(listaResultado,\"payloadHomol.intermediarias.segmentacaoNegocio\",\"segmentacaoNegocio\")\n",
     "massa_segmentacaoNegocio.get_massa_dm()"
@@ -317,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -332,7 +633,7 @@
    },
    "outputs": [],
    "source": [
-    "massa_segmentacaoNegocio.get_massa_dm().to_csv('C:/Users/T51657/Desktop/Homologação/Modelos Online/v2/massas/Modulares/massaSegmentacaoNegocio.csv',index=False)"
+    "massa_segmentacaoNegocio.get_massa_dm().to_csv('C:/Users/T51657/Desktop/Homologação/Modelos Online/v2/massas/Modulares/massaSegmentacaoNegocioV2.csv',index=False)"
    ]
   }
  ],
@@ -361,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
