--- a/v2/homol_modular_flagRenda.ipynb
+++ b/v2/homol_modular_flagRenda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.library.restartPython()"
+    "# dbutils.library.restartPython()"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -155,7 +155,18 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------\n",
+      "Payload setado com sucesso\n",
+      "--------------------------------------\n",
+      "Conversao concluida com sucesso\n"
+     ]
+    }
+   ],
    "source": [
     "#Criação das massas com casos forçados\n",
     "#Digito CPF Concomitante CP\n",
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -189,7 +200,95 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>solicitante.fonteRenda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02. Funcionários Não FOPAG (J&amp;F)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>04. Renda OPF Confirmada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>08. Blend Externo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>06. Servidor Público</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>03. Portabilidade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>07. Blend Interno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>99. Não encontrada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>01. Fopag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-99999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>00. Dominio X Nao Previsto</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             solicitante.fonteRenda\n",
+       "0  02. Funcionários Não FOPAG (J&F)\n",
+       "1          04. Renda OPF Confirmada\n",
+       "2                 08. Blend Externo\n",
+       "3              06. Servidor Público\n",
+       "4                 03. Portabilidade\n",
+       "5                 07. Blend Interno\n",
+       "6                99. Não encontrada\n",
+       "7                         01. Fopag\n",
+       "8                            -99999\n",
+       "9        00. Dominio X Nao Previsto"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "massa_flagRenda.get_massa_final()"
    ]
@@ -214,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -252,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -265,7 +364,70 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>valor</th>\n",
+       "      <th>Freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BATCH</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OPEN FINANCE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OPEN FINANCE SERVIDOR</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   valor  Freq\n",
+       "0                  BATCH     3\n",
+       "1           OPEN FINANCE     1\n",
+       "2    OPEN FINANCE MODELO     5\n",
+       "3  OPEN FINANCE SERVIDOR     1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "results = []\n",
@@ -280,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -301,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -314,7 +476,162 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data-ID</th>\n",
+       "      <th>Result-State</th>\n",
+       "      <th>Result-Detail</th>\n",
+       "      <th>fonteRenda</th>\n",
+       "      <th>result:flagTipoRenda</th>\n",
+       "      <th>expected:flagTipoRenda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>02. Funcionários Não FOPAG (J&amp;F)</td>\n",
+       "      <td></td>\n",
+       "      <td>BATCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>04. Renda OPF Confirmada</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>08. Blend Externo</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>06. Servidor Público</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE SERVIDOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>03. Portabilidade</td>\n",
+       "      <td></td>\n",
+       "      <td>BATCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>07. Blend Interno</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>99. Não encontrada</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>01. Fopag</td>\n",
+       "      <td></td>\n",
+       "      <td>BATCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-99999</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>00. Dominio X Nao Previsto</td>\n",
+       "      <td></td>\n",
+       "      <td>OPEN FINANCE MODELO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Data-ID Result-State Result-Detail                        fonteRenda  \\\n",
+       "0        1                             02. Funcionários Não FOPAG (J&F)   \n",
+       "1        2                                     04. Renda OPF Confirmada   \n",
+       "2        3                                            08. Blend Externo   \n",
+       "3        4                                         06. Servidor Público   \n",
+       "4        5                                            03. Portabilidade   \n",
+       "5        6                                            07. Blend Interno   \n",
+       "6        7                                           99. Não encontrada   \n",
+       "7        8                                                    01. Fopag   \n",
+       "8        9                                                       -99999   \n",
+       "9       10                                   00. Dominio X Nao Previsto   \n",
+       "\n",
+       "  result:flagTipoRenda expected:flagTipoRenda  \n",
+       "0                                       BATCH  \n",
+       "1                                OPEN FINANCE  \n",
+       "2                         OPEN FINANCE MODELO  \n",
+       "3                       OPEN FINANCE SERVIDOR  \n",
+       "4                                       BATCH  \n",
+       "5                         OPEN FINANCE MODELO  \n",
+       "6                         OPEN FINANCE MODELO  \n",
+       "7                                       BATCH  \n",
+       "8                         OPEN FINANCE MODELO  \n",
+       "9                         OPEN FINANCE MODELO  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "massa_flagRenda.atribui_expected(listaResultado,\"payloadHomol.saidas.flagTipoRenda\",\"flagTipoRenda\")\n",
     "massa_flagRenda.get_massa_dm()"
@@ -340,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -355,7 +672,7 @@
    },
    "outputs": [],
    "source": [
-    "massa_flagRenda.get_massa_dm().to_csv('C:/Users/T51657/Desktop/Homologação/Modelos Online/v2/massas/Modulares/massaFlagTipoRenda.csv',index=False)"
+    "massa_flagRenda.get_massa_dm().to_csv('C:/Users/T51657/Desktop/Homologação/Modelos Online/v2/massas/Modulares/massaFlagTipoRendaV2.csv',index=False)"
    ]
   }
  ],
@@ -384,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
