--- a/v2/Testes_e_rascunhos.ipynb
+++ b/v2/Testes_e_rascunhos.ipynb
@@ -1642,6 +1642,27 @@
     "\n",
     "teste = sparkDF.select('cpf6e7Digito').filter(col('rangeScoreInterno' == \"R2\")).distinct()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nao\n"
+     ]
+    }
+   ],
+   "source": [
+    "testeNum = \"20\"\n",
+    "\n",
+    "if testeNum >= \"10\":\n",
+    "    print(testeNum)\n",
+    "else: print('nao')"
+   ]
   }
  ],
  "metadata": {
