--- a/v2/Testes_e_rascunhos.ipynb
+++ b/v2/Testes_e_rascunhos.ipynb
@@ -1652,16 +1652,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nao\n"
+      "3600\n",
+      "3600\n"
      ]
     }
    ],
    "source": [
-    "testeNum = \"20\"\n",
+    "teste = min(max(500*2,10000),3600)\n",
+    "print(teste)\n",
+    "teste = (round(teste/50))*50\n",
     "\n",
-    "if testeNum >= \"10\":\n",
-    "    print(testeNum)\n",
-    "else: print('nao')"
+    "print(teste)"
    ]
   }
  ],
